--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "docxtemplater": "^3.55.4",
+    "docxtemplater-image-module-free": "^1.1.1",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "pizzip": "^3.1.7",
+    "uuid": "^11.0.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
