--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -17,6 +17,7 @@
     "docxtemplater-image-module-free": "^1.1.1",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "image-size": "^1.1.1",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
